HU2: Listar las categorias con paginación por orden, completo con tests y documentación.