@@ -1,5 +1,7 @@
 package com.emazon.stock.configuration.exceptionhandler;
 
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
@@ -9,7 +11,6 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class ControllerAdvisor {
@@ -26,10 +27,20 @@ public class ControllerAdvisor {
                         return objectError.getDefaultMessage();
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.badRequest().body(
                 new ValidationExceptionResponse(errorMessages, HttpStatus.BAD_REQUEST.toString(), LocalDateTime.now())
+        );
+    }
+
+    @ExceptionHandler(ConstraintViolationException.class)
+    public ResponseEntity<ValidationExceptionResponse> handleConstraintViolationException(ConstraintViolationException ex) {
+        List<String> errorsMessages = ex.getConstraintViolations().stream()
+                .map(ConstraintViolation::getMessage)
+                .toList();
+        return ResponseEntity.badRequest().body(
+                new ValidationExceptionResponse(errorsMessages, HttpStatus.BAD_REQUEST.toString(), LocalDateTime.now())
         );
     }
 }
